Make Follow and follow steps

--- a/RecipeTop/main/static/main/scss/follow_steps.scss
+++ b/RecipeTop/main/static/main/scss/follow_steps.scss
@@ -1,4 +1,4 @@
-.follow_container{
+.follow_steps_container{
 	float: right;
     margin:0 auto;
     height:1000px;
@@ -7,7 +7,7 @@
 
 }
 
-.follow_info{
+.follow_steps_info{
     margin:0 auto;
     height:1000px;
     width: 95%;
