--- a/RecipeTop/main/static/main/css/follow_steps.css
+++ b/RecipeTop/main/static/main/css/follow_steps.css
@@ -1,4 +1,4 @@
-.follow_container {
+.follow_steps_container {
   float: right;
   margin: 0 auto;
   height: 1000px;
@@ -6,7 +6,7 @@
   margin: 0 auto;
 }
 
-.follow_info{
+.follow_steps_info{
     margin:0 auto;
     height:1000px;
     width: 95%;
