--- a/RecipeTop/main/static/main/scss/menu.scss
+++ b/RecipeTop/main/static/main/scss/menu.scss
@@ -1,7 +1,7 @@
 body{
     margin:0px;
     padding:0px;
-    background-color:royalblue;
+    background-color:white;
     height:1000px;
 }
 
@@ -10,7 +10,7 @@ $shadow_blue:#005fb3;
 
 .Mnavbar{
     position: fixed;
-    height:15vh;
+    height:13vh;
     width:100%;
     z-index: 100;
    
@@ -19,11 +19,11 @@ $shadow_blue:#005fb3;
        display:grid;
        align-content: center;
        grid-template-columns: 4fr 1fr;
-       background:#0074D9;
+       background:white;
        width:100%;
        height:100%;
        grid-column-gap: 5px;
-       box-shadow: 0 2px $shadow_blue;
+       box-shadow: 0 2px black;
        .logo{
         width:100%;
         height:100%;
@@ -42,7 +42,7 @@ $shadow_blue:#005fb3;
         padding-left:80px;
 
         #time{
-            color:white;
+            color:black;
         }
        }
        div {
