--- a/RecipeTop/main/static/main/css/search.css
+++ b/RecipeTop/main/static/main/css/search.css
@@ -20,4 +20,8 @@
   color: blue;
 }
 
+.card .card-image .card-title {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 /*# sourceMappingURL=search.css.map */
