--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href={% static "main/css/materialize.css" %}>
     <link rel="stylesheet" href={% static "main/css/users.css" %}>
     
-    <title>loading screen</title>
+    <title>User Selection</title>
 </head>
 <body>
 <div class="top"></div>
