--- a/RecipeTop/main/static/main/css/search.css
+++ b/RecipeTop/main/static/main/css/search.css
@@ -24,4 +24,9 @@
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
+.card .card-title {
+  font-size: 30px;
+  font-weight: 400;
+}
+
 /*# sourceMappingURL=search.css.map */
