--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -1,5 +1,8 @@
 {% extends 'main/layout.html' %}
 {% load static %}
+
+{% block title %}Create Recipe{% endblock %}
+
 {% block stylesheet %}
 <link rel="stylesheet" href={% static "main/css/create.css" %}>
 {% endblock %}
