--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -1,10 +1,12 @@
 {% extends 'main/layout.html' %}
 {% load static %}
 
+{% block title %}Search Recipes{% endblock %}
+
 {% block stylesheet %}
 <link rel="stylesheet" href={% static "main/css/search.css" %}>
-
 {% endblock %}
+
 {% block content %}
 <br>
 <br>
@@ -14,7 +16,7 @@
 <div class="container">
     <div class="grid">
         {% for recipe in hearted %}
-        <div class="card">
+        <div class="card" id={{recipe.id}}>
             <div class="card-image">
                 {% if recipe.image %}
                 <img src="{{recipe.image.url}}">
