color changes and action button

--- a/RecipeTop/main/static/main/scss/menu.scss
+++ b/RecipeTop/main/static/main/scss/menu.scss
@@ -118,7 +118,7 @@ $shadow_blue:#005fb3;
 #MainMenu{
     height: 100vh;
     width: 300px;
-    background-color: hsla(0, 0%, 9%,.9);
+    background-color: #cfd8dc;
     -webkit-clip-path:polygon(0 0,100% 0,0% 100%,0% 100%);
     clip-path:polygon(0 0,100% 0,0% 100%,0% 100%);
     position: fixed;
