--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -33,26 +33,28 @@
         </div>
         <ul class="collapsible">
             <li>
-                <div class="collapsible-header blue">
+                <div class="collapsible-header teal lighten-2">
                     <i class="material-icons">assignment</i>Recipes
                 </div>
-                <div class="collapsible-body blue">
-                        <a href={% url 'create' %} class="waves-effect active red">create<i class="material-icons red">create</i></a>
-                        <a href={% url 'search' %} class="waves-effect active red">search<i class="material-icons red">search</i></a>
+                <div class="collapsible-body teal lighten-3">
+                        <a href={% url 'create' %} class="waves-effect active blue-grey darken-1">create<i class="material-icons blue-grey darken-1">create</i></a>
                         <br>
                         <br>
-                        <a href={% url 'hearted' %} class="waves-effect active pink">favorite<i class="material-icons red">favorite</i></a>
+                        <a href={% url 'search' %} class="waves-effect active blue-grey darken-1">search<i class="material-icons blue-grey darken-1">search</i></a>
+                        <br>
+                        <br>
+                        <a href={% url 'hearted' %} class="waves-effect active blue-grey darken-1">favorite<i class="material-icons blue-grey darken-1">favorite</i></a>
                 </div>
             </li>
             <li>
-                <div class="collapsible-header blue"><i class="material-icons">place</i>Place holder</div>
-                <div class="collapsible-body blue"><span></div>
+                <div class="collapsible-header teal lighten-1"><i class="material-icons">place</i>Place holder</div>
+                <div class="collapsible-body teal lighten-2"><span></div>
             </li>
             <li>
-                <div class="collapsible-header blue"><i class="material-icons">account_circle</i>Account</div>
-                <div class="collapsible-body blue">
-                        <a href="" class="waves-effect active red">account<i class="material-icons">create</i></a>
-                        <a href="" class="waves-effect active red">settings<i class="material-icons">search</i></a>
+                <div class="collapsible-header teal darken-1"><i class="material-icons">account_circle</i>Account</div>
+                <div class="collapsible-body teal">
+                        <a href="" class="waves-effect active blue-grey darken-1">account<i class="material-icons">create</i></a>
+                        <a href="" class="waves-effect active blue-grey darken-1">settings<i class="material-icons">search</i></a>
                 </div>
             </li>
         </ul>
