--- a/RecipeTop/main/static/main/css/menu.css
+++ b/RecipeTop/main/static/main/css/menu.css
@@ -100,7 +100,7 @@ body {
 #MainMenu {
   height: 100vh;
   width: 300px;
-  background-color: rgba(23, 23, 23, 0.9);
+  background-color: #cfd8dc;
   -webkit-clip-path: polygon(0 0, 100% 0, 0% 100%, 0% 100%);
   clip-path: polygon(0 0, 100% 0, 0% 100%, 0% 100%);
   position: fixed;
