--- a/RecipeTop/main/templates/main/follow.html
+++ b/RecipeTop/main/templates/main/follow.html
@@ -37,11 +37,13 @@
   			<a class="btn-floating btn-large teal darken-3">
     			<i class="large material-icons">cake</i>
   			</a>
+  			<div class="popup-container">
   			<ul>
-    			<li><a class="btn-floating teal lighten-3"><i class="material-icons">timer</i></a></li>
+    			<li><a class="btn-floating teal lighten-3"><i class="material-icons" id="modal-drag-anywhere">timer</i></a></li>
     			<li><a class="btn-floating teal lighten-1"><i class="material-icons">whatshot</i></a></li>
     			<li><a class="btn-floating teal"><i class="material-icons">fitness_center</i></a></li>
   			</ul>
+  			</div>
 		</div>
     </div>
 
