--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -64,17 +64,31 @@
        
 
         <!-- utensils -->
-        <h3>Utensils</h3>
 
-        {% for utensil in utensils%}
-        <label>
-			<input type="checkbox" value="{{utensil}}" name="utensil"/>
-			<span>{{utensil}}</span>
-        </label>
+        <h4>Utensils</h4>
+        <table>
+        <tr>
+        {% for utensil in utensils %}
+        	{% if not forloop.last and forloop.counter == 5 or forloop.counter == 9 %}
+        		    </tr>
+    				<tr>
+        	{% endif %}
+        	<td>
+        		<label>
+					<input type="checkbox" value="{{utensil}}" name="utensil"/>
+					<span>{{utensil}}</span>
+        		</label>
+        	</td>
+        
         {% endfor %}
+        	</tr>
+
+       	</table>
+
+
 
 		<!-- Tags -->
-        <h3>Tags</h3>
+        <h4>Tags</h4>
 		<div class="chips chips-autocomplete" id="chip"></div>
 		<div class="time">
 			<h3>Time</h3>
