timer pop up - sort of

--- a/RecipeTop/main/templates/main/follow.html
+++ b/RecipeTop/main/templates/main/follow.html
@@ -24,7 +24,7 @@
 		    		<li>
 		    			<label>
 		        			<input type="checkbox" value="{{ing.ingredient.name}}" name="ingredient"/>
-		       				 <span>{{ing.quantity}} {{ing.unit}} {{ing.ingredient.name}}  </span>
+		       				 <span>{{ing.quantity}} {{ing.get_unit}} {{ing.ingredient.name}}  </span>
 		    			</label>
 		    		</li>
 		    	{% endfor %}
