format create page

--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -28,6 +28,18 @@
 			<label for="description">Description</label>
 		</div>
 
+
+    	<div class="file-field input-field">
+      		<div class="btn">
+        		<span>Browse Images</span>
+        		<input type="file">
+      		</div>
+      		<div class="file-path-wrapper">
+        		<input class="file-path validate" type="text" name="recipe_image">
+        		<label for="recipe_image">Select an image</label>
+      		</div>
+    	</div>
+
         <table id="table">
         <tr>
 			<td>Ingredient</td>
@@ -91,17 +103,33 @@
         <h4>Tags</h4>
 		<div class="chips chips-autocomplete" id="chip"></div>
 		<div class="time">
-			<h3>Time</h3>
-			<input type="text" name="time">
+			<h4>Time</h4>
+      		<input type="range" name="time" min="0" max="180" />
+
 		</div>
 
 		<!-- steps -->
 		<div id="steps">
 			<h3> Steps</h3>
 			<!-- <input type="text"  name=step id="in"> -->
+			<table id="table_steps">
+				<tr>
+					<td class="step_number">
+						<span>1.</span>
+					</td>
+					<td>
+						<input type="text" name="step" placeholder="Preheat oven to ...">
+					</td>
+				</tr>
+			
+			</table>
 		</div>
-		<button onclick="addSteps()" class='waves-effect waves-light btn' type="button">Add a step</button>
-		<button type="submit" onclick="addChips()">Submit Changes</button>
+
+		<button onclick="addSteps()" class='waves-effect waves-light btn blue-grey' type="button">Add step</button>
+		<br>
+		<br>
+
+		<button type="submit" onclick="addChips()" class='waves-effect waves-light btn teal accent-3'>Save Recipe</button>
 	</form>
 		
 </div>
