--- a/RecipeTop/main/static/main/css/search.css
+++ b/RecipeTop/main/static/main/css/search.css
@@ -13,11 +13,33 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 5px;
 }
-.container .grid h3 {
-  color: red;
+
+.ingredient {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: 0 auto;
 }
-.container h3 {
-  color: blue;
+
+.ingredient_title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ingredient_props {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 40px;
+}
+
+#txt1 {
+  font-size: 16px;
+  line-height: 4px;
+}
+
+.inline-icon {
+  vertical-align: bottom;
+  font-size: 18px !important;
 }
 
 /*# sourceMappingURL=search.css.map */
