--- a/RecipeTop/main/static/main/scss/search.scss
+++ b/RecipeTop/main/static/main/scss/search.scss
@@ -21,12 +21,49 @@
         grid-column-gap: 5px;
         
 
-        h3{
-            color:red;
-        }
+    
     }
-    h3{
-        color:blue;
-    }
+  
 
 }
+
+
+.ingredient{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin:0 auto;
+}
+
+.ingredient_title{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.ingredient_props{
+   display:grid;
+   grid-template-columns: 1fr 1fr;
+   grid-column-gap: 40px;
+
+}
+
+
+
+#txt1{
+    font-size:16px;
+    line-height:4px;
+   }
+.inline-icon {
+    vertical-align: bottom;
+    font-size: 18px !important;
+ }
+
+// .prop1{
+//     border-radius: 50%;
+//     background-color: aqua;
+//   }
+
+//   .prop2{
+//     border-radius: 50%;
+//     background-color: red;
+//   }
