--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -3,6 +3,10 @@
 
 {% block stylesheet %}
 <link rel="stylesheet" href={% static "main/css/search.css" %}>
+<link rel="stylesheet" href={% static "main/css/gallery-materialize.min.css" %}>
+
+
+
 
 {% endblock %}
 {% block content %}
@@ -71,7 +75,7 @@
 
 
 
-<div class="container">
+<!-- <div class="container">
     <div class="search">
         <form action="{% url 'search' %}" method="GET">
             <h3>Search</h3>
@@ -84,17 +88,91 @@
             <button type="submit">Submit</button>
         </form>
     </div>
-</div>
+</div> -->
 
 
-
+<!-- 
 {% for i in filter%}
 <h1> {{i.title}}={{i.difficulty}} : {{i.rating}}</h1>
 
-{% endfor %}
+{% endfor %} -->
 
+
+<div id="portfolio" class="section gray">
+    <div class="container">
+        <div class="gallery row">
+            {% for recipe in recipes %}
+            <div class="col l4 m6 s12 gallery-item gallery-expand gallery-filter polygon">
+                <div class="gallery-curve-wrapper">
+                <a class="gallery-cover gray card-image">
+                    {% if recipe.image %}
+                    <img src="{{recipe.image.url}}">
+                    {% else %}
+                    <img class="responsive-img" src="http://placehold.it/350x250" alt="placeholder">
+                    <!-- <div class="circle">circle</div> -->
+                    {% endif %}
+                </a>
+                <!-- card title -->
+                <div class="gallery-header">
+                   <div class="ingredient_title">
+                        <span class= description>{{recipe}}</span>
+                   </div>
+                   <br>
+                   <div class="ingredient_props">
+                       <div>    
+                            <i class="material-icons">library_books</i>
+                            <!-- <span><i class="material-icons hearted ">note</i>steps:{{recipe.steps.all.count}}</span> -->
+                       </div>
+                        <div class="prop2"><i class="material-icons hearted">schedule</i></div>
+                        <div class="prop1"><i class="material-icons hearted ">local_dining</i></div>
+                        <div class="prop2"><i class="material-icons hearted">favorite</i></div>
+                        
+                   </div>
+                </div>
+                <!-- inside the card stuff -->
+                <div class="gallery-body">
+                        <div class="title-wrapper">
+                          <h3>{{recipe.title}}</h3>
+                          <span class="price">steps:{{recipe.steps.all.count}}</span>
+                        </div>
+                        <h3>Ingredients</h3>
+                        <div class="ingredient">
+                        {% for ing in recipe.recipetoingredient_set.all %}
+                            <p>name: {{ing.ingredient.name}}</p>
+                            <p>unit: {{ing.unit}}</p>
+                            <p>quantity: {{ing.quantity}}</p>
+                        {% endfor %}
+                        </div>
+                        <h2>description</h2>
+                        <p class="description">
+                                {{recipe.description}}
+                        </p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo modi vel autem ducimus atque eligendi dolores repellat, temporibus, animi eum quis deserunt placeat exercitationem praesentium eaque at rerum aperiam soluta?</p>
+                </div>
+                    <div class="gallery-action">
+                        <a class="btn-floating btn-large waves-effect pink"><i class="material-icons hearted">favorite</i></a>
+                        <button class= "btn-floating btn-large waves-effect green"><i class="material-icons">check</i></button>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block javascript %}
 <script src={% static "main/js/hearted.js" %}></script>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src={% static "main/js/gallery/materialize.min.js" %}></script>
+<script src={% static "main/js/gallery/masonry.pkgd.min.js"" %}></script>
+<script src={% static "main/js/gallery/galleryExpand.js" %}></script>
+<script src={% static "main/js/gallery/init.js" %}></script>
+<script src={% static "main/js/gallery/color-thief.min.js" %}></script>
+<script src={% static "main/js/gallery/imagesloaded.pkgd.min.js" %}></script>
+
+
+
 {% endblock %}
