add rating stars html and save image

--- a/RecipeTop/main/static/main/css/create.css
+++ b/RecipeTop/main/static/main/css/create.css
@@ -8,7 +8,29 @@
 .step_number{
 	width:2%;
 	align:left;
-	color:#1de9b6;
+	color:teal;
+}
+
+.icon-teal{
+	color:#80cbc4;
+}
+
+.time{
+	width:50%;
+	align:right;
+
+}
+.rating{
+	width:50%;
+	align:right;
+
+}
+
+.star_button{
+	border: none;
+	background-color: white;
+	padding: 15px 10px; 
+
 }
 
 
