--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -17,7 +17,7 @@
 <br>
 
 <div class="create_container white">
-	<form action="{% url 'create' %}" method="POST">
+	<form action="{% url 'create' %}" method="POST" enctype="multipart/form-data">
 		{% csrf_token %}
 		<div class="input-field">
 			<input type="text" name="title">
@@ -28,18 +28,19 @@
 			<label for="description">Description</label>
 		</div>
 
-
+		<!-- Icon image file picker-->
     	<div class="file-field input-field">
       		<div class="btn">
         		<span>Browse Images</span>
-        		<input type="file">
+        		<input type="file" name="recipe_image">
       		</div>
       		<div class="file-path-wrapper">
-        		<input class="file-path validate" type="text" name="recipe_image">
+        		<input class="file-path validate" type="text" >
         		<label for="recipe_image">Select an image</label>
       		</div>
     	</div>
 
+    	<!-- Ingredients-->
         <table id="table">
         <tr>
 			<td>Ingredient</td>
@@ -75,7 +76,7 @@
 	
        
 
-        <!-- utensils -->
+        <!-- Utensils -->
 
         <h4>Utensils</h4>
         <table>
@@ -99,18 +100,9 @@
 
 
 
-		<!-- Tags -->
-        <h4>Tags</h4>
-		<div class="chips chips-autocomplete" id="chip"></div>
-		<div class="time">
-			<h4>Time</h4>
-      		<input type="range" name="time" min="0" max="180" />
-
-		</div>
-
 		<!-- steps -->
 		<div id="steps">
-			<h3> Steps</h3>
+			<h4>Method:</h4>
 			<!-- <input type="text"  name=step id="in"> -->
 			<table id="table_steps">
 				<tr>
@@ -124,12 +116,62 @@
 			
 			</table>
 		</div>
-
 		<button onclick="addSteps()" class='waves-effect waves-light btn blue-grey' type="button">Add step</button>
 		<br>
-		<br>
 
+
+		<!-- Tags -->
+        <h4>Tags</h4>
+		<div class="chips chips-autocomplete" id="chip"></div>
+
+		<!-- Estimated Duration -->
+		<div class="time">
+			<h4>Estimated Duration (minutes)</h4>
+			<p class="range-field">
+      			<input type="range" name="time" min="0" max="120" step="5"/>
+      		</p>
+		</div>
+
+		<!-- Rating -->
+		
+		<div class="rating">
+			<h4>Rating</h4>
+			<table id="rating_table">
+				<tr>
+					<td>
+						<button type="button" id="star_1" class="star_button" >
+							<i class="medium material-icons icon-teal">star_outline</i>
+						</button>
+					</td>
+					<td>
+						<button type="button" id="star_2" class="star_button">
+							<i class="medium material-icons icon-teal">star_outline</i>
+						</button>
+					</td>
+					<td>
+						<button type="button" id="star_3" class="star_button">
+							<i class="medium material-icons icon-teal">star_outline</i>
+						</button>
+					</td>
+					<td>
+						<button type="button" id="star_4" class="star_button">
+							<i class="medium material-icons icon-teal">star_outline</i>
+						</button>
+					</td>
+					<td>
+						<button type="button" id="star_5" class="star_button">
+							<i class="medium material-icons icon-teal">star_outline</i>
+						</button>
+					</td>
+				</tr>
+			</table>
+		</div>
+
+		<br>		
+		<!-- Submit -->
 		<button type="submit" onclick="addChips()" class='waves-effect waves-light btn teal accent-3'>Save Recipe</button>
+		<br>
+		<br>
 	</form>
 		
 </div>
@@ -137,6 +179,7 @@
 
 {%block javascript %}
 <script src={% static "main/js/create.js" %}></script>
+
 
 <script>
 	function loadAutoComplete()
