add ratings to create, fix some bugs

--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -134,32 +134,32 @@
 
 		<!-- Rating -->
 		
-		<div class="rating">
+		<div class="rating" id="rating_container">
 			<h4>Rating</h4>
 			<table id="rating_table">
 				<tr>
 					<td>
-						<button type="button" id="star_1" class="star_button" >
+						<button type="button" id="1" class="star_button" >
 							<i class="medium material-icons icon-teal">star_outline</i>
 						</button>
 					</td>
 					<td>
-						<button type="button" id="star_2" class="star_button">
+						<button type="button" id="2" class="star_button">
 							<i class="medium material-icons icon-teal">star_outline</i>
 						</button>
 					</td>
 					<td>
-						<button type="button" id="star_3" class="star_button">
+						<button type="button" id="3" class="star_button">
 							<i class="medium material-icons icon-teal">star_outline</i>
 						</button>
 					</td>
 					<td>
-						<button type="button" id="star_4" class="star_button">
+						<button type="button" id="4" class="star_button">
 							<i class="medium material-icons icon-teal">star_outline</i>
 						</button>
 					</td>
 					<td>
-						<button type="button" id="star_5" class="star_button">
+						<button type="button" id="5" class="star_button">
 							<i class="medium material-icons icon-teal">star_outline</i>
 						</button>
 					</td>
