add difficulty to creat page

--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -167,6 +167,41 @@
 			</table>
 		</div>
 
+		<!-- Difficulty-->
+		
+		<div class="difficulty" id="difficulty_container">
+			<h4>Difficulty</h4>
+			<table id="difficulty_table">
+				<tr>
+					<td>
+						<button type="button" id="101" class="difficulty_button" >
+							<i class="medium material-icons icon-grey">cake</i>
+						</button>
+					</td>
+					<td>
+						<button type="button" id="102" class="difficulty_button">
+							<i class="medium material-icons icon-grey">cake</i>
+						</button>
+					</td>
+					<td>
+						<button type="button" id="103" class="difficulty_button">
+							<i class="medium material-icons icon-grey">cake</i>
+						</button>
+					</td>
+					<td>
+						<button type="button" id="104" class="difficulty_button">
+							<i class="medium material-icons icon-grey">cake</i>
+						</button>
+					</td>
+					<td>
+						<button type="button" id="105" class="difficulty_button">
+							<i class="medium material-icons icon-grey">cake</i>
+						</button>
+					</td>
+				</tr>
+			</table>
+		</div>
+
 		<br>		
 		<!-- Submit -->
 		<button type="submit" onclick="addChips()" class='waves-effect waves-light btn teal accent-3'>Save Recipe</button>
