--- a/RecipeTop/main/static/main/css/create.css
+++ b/RecipeTop/main/static/main/css/create.css
@@ -5,6 +5,7 @@
   margin: 0 auto;
 }
 
+
 .step_number{
 	width:2%;
 	align:left;
@@ -13,6 +14,9 @@
 
 .icon-teal{
 	color:#80cbc4;
+}
+.icon-grey{
+	color:#b0bec5;
 }
 
 .time{
@@ -25,8 +29,19 @@
 	align:right;
 
 }
+.difficulty{
+	width:50%;
+	align:right;
+}
 
 .star_button{
+	border: none;
+	background-color: white;
+	padding: 15px 10px; 
+
+}
+
+.difficulty_button{
 	border: none;
 	background-color: white;
 	padding: 15px 10px; 
