--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -77,27 +77,42 @@
        
 
         <!-- Utensils -->
-
-        <h4>Utensils</h4>
-        <table>
-        <tr>
-        {% for utensil in utensils %}
-        	{% if not forloop.last and forloop.counter == 5 or forloop.counter == 9 %}
-        		    </tr>
-    				<tr>
-        	{% endif %}
-        	<td>
-        		<label>
-					<input type="checkbox" value="{{utensil}}" name="utensil"/>
-					<span>{{utensil}}</span>
-        		</label>
-        	</td>
+        <div id="utensils">
+        	<h4>Utensils</h4>
+        	<table "utensils_table">
+        		<tr>
+        			{% for utensil in utensils %}
+        				{% if not forloop.last and forloop.counter == 5 or forloop.counter == 9 %}
+        		</tr>
+    			<tr>
+        				{% endif %}
+        				<td>
+        					<label>
+								<input type="checkbox" value="{{utensil}}" name="utensil"/>
+								<span>{{utensil}}</span>
+        					</label>
+        				</td>
         
-        {% endfor %}
-        	</tr>
+        			{% endfor %}
+        		</tr>
 
-       	</table>
-
+       		</table>
+       		<button data-target="utensil_modal" class='waves-effect waves-light btn modal-trigger blue-grey' type="button">Add utensil</button>
+       		<!-- Modal Structure -->
+		  	<div class="modal" id="utensil_modal">
+		    	<div class="modal-content">
+		      		<h3>Add Utensil:</h3>
+		      		<div class="input-field">
+						<input type="text" name="utensil" id="new_utensil">
+						<label for="utensil">Utensil</label>
+					</div>
+		    	</div>
+		    	<div class="modal-footer">
+		      		<button onclick="addUtensil()" class='waves-effect waves-light btn teal-accent' type="button">Save</button>
+		    	</div>
+		    </div>
+       	</div>
+       	<br>
 
 
 		<!-- steps -->
@@ -204,7 +219,7 @@
 
 		<br>		
 		<!-- Submit -->
-		<button type="submit" onclick="addChips()" class='waves-effect waves-light btn teal accent-3'>Save Recipe</button>
+		<button type="submit" onclick="return saveForm()" class='waves-effect waves-light btn teal accent-3'>Save Recipe</button>
 		<br>
 		<br>
 	</form>
