--- a/RecipeTop/main/templates/main/follow_steps.html
+++ b/RecipeTop/main/templates/main/follow_steps.html
@@ -3,6 +3,7 @@
 
 {% block stylesheet %}
 <link rel="stylesheet" href={% static "main/css/follow_steps.css" %}>
+<link rel="stylesheet" href={% static "main/css/mstepper.css" %}>
 {% endblock %}
 
 
@@ -12,6 +13,20 @@
 	<br>
 	<br>
 	<br>
+
+<ul class="stepper linear">
+   <li class="step active">
+      <div class="step-title waves-effect">E-mail</div>
+      <div class="step-content">
+         <!-- Your step content goes here (like inputs or so) -->
+         <div class="step-actions">
+            <!-- Here goes your actions buttons -->
+            <button class="waves-effect waves-dark btn next-step">CONTINUE</button>
+         </div>
+      </div>
+   </li>
+</ul>
+
 
 <div class = "follow_steps_info white">
 		<h3>Gather your ingredients...</h3>
@@ -37,11 +52,23 @@
     			<i class="large material-icons">cake</i>
   			</a>
   			<div class="popup-container">
-  			<ul>
-    			<li><a class="btn-floating teal lighten-3"><i class="material-icons" id="timer-drag-anywhere">timer</i></a></li>
-    			<li><a class="btn-floating teal lighten-1"><i class="material-icons" id="preheat-drag-anywhere">whatshot</i></a></li>
-    			<li><a class="btn-floating teal"><i class="material-icons" id="scale-drag-anywhere">fitness_center</i></a></li>
-  			</ul>
+	  			<ul>
+	    			<li>
+	    				<a class="btn-floating teal lighten-3">
+	    					<i class="material-icons" id="timer-drag-anywhere">timer</i>
+	    				</a>
+	    			</li>
+	    			<li>
+	    				<a class="btn-floating teal lighten-1">
+	    					<i class="material-icons" id="preheat-drag-anywhere">whatshot</i>
+	    					</a>
+	    			</li>
+	    			<li>
+	    				<a class="btn-floating teal">
+	    					<i class="material-icons" id="scale-drag-anywhere">fitness_center</i>
+	    				</a>
+	    			</li>
+	  			</ul>
   			</div>
 		</div>
     </div>
@@ -51,5 +78,12 @@
 {%block javascript %}
 <script> var recipe_id = ({{recipe.id}}) </script>
 <script src={% static "main/js/follow_steps.js" %}></script>
-
+<script src={% static "main/js/mstepper.min.js" %}></script>
+<script>
+   var stepper = document.querySelector('.stepper');
+   var stepperInstace = new MStepper(stepper, {
+      // options
+      firstActive: 0 // this is the default
+   })
+</script>
 {% endblock %}
