--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -44,7 +44,7 @@
         {% endfor %}
 
         {% for recipe in recipes %}
-        <div class="card">
+        <div class="card" id={{recipe.id}}>
             <div class="card-image">
                 {% if recipe.image %}
                 <img src="{{recipe.image.url}}">
