--- a/RecipeTop/main/templates/main/home.html
+++ b/RecipeTop/main/templates/main/home.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="carousel">
     {% for recipe in recipes %}
-        <a href="#one!" class="carousel-item">
+        <a href="{% url 'follow' recipe.id %}" class="carousel-item">
             <div class="Home_container">
                 <div class="photo photo{{forloop.counter}}">
                         <div class="min">
